examples/test/testpolicy13487.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13487
  namespace: namespace394
spec:
  podSelector:
    matchLabels:
      key7: value13
      key44: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value17
      podSelector:
        matchLabels:
          key37: value39
          key48: value34
